other solutions